--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,6 @@ python-multipart==0.0.6
 requests==2.31.0
 
 opencensus-ext-azure==1.1.9
-opencensus-ext-requests==0.12.1
+opencensus-ext-requests
 
 streamlit
